/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package psf;

/**
 *
 * @author 15385404608
 */
public interface Pessoa {
    public void setNome(String nome);
    public void setCpf(String Cpf);
    public String getNome();
    public String getCpf();
    
    
    
}
